logs/sprint.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sprint'...
Compiling './lib/python3.5/site-packages/sprint/pipeline.py'...
***   File "./lib/python3.5/site-packages/sprint/pipeline.py", line 12
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sprint/sprint_main.py'...
***   File "./lib/python3.5/site-packages/sprint/sprint_main.py", line 7
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sprint/sprint_prepare.py'...
***   File "./lib/python3.5/site-packages/sprint/sprint_prepare.py", line 6
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sprint/tools_bed'...
Compiling './lib/python3.5/site-packages/sprint/tools_bed/annotate.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_bed/annotate.py", line 4
    print 'Please check the input directory! annotate(bed_in_dir,bed_anno_dir,bed_out_dir)'
                                                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sprint/tools_fa'...
Compiling './lib/python3.5/site-packages/sprint/tools_fa/maskAwithG.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_fa/maskAwithG.py", line 3
    print 'fa_in_dir\tfa_our_dir'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sprint/tools_fa/maskTwithC.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_fa/maskTwithC.py", line 3
    print 'fa_in_dir\tfa_our_dir'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sprint/tools_fa/transcript_assembler.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_fa/transcript_assembler.py", line 3
    print 'fref_in_dir\tfgtf_in_dir\tftrans_out_dir'
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sprint/tools_fa/transcript_locator.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_fa/transcript_locator.py", line 3
    print 'fbed_in_dir\tftransloc_in_dir\tfbed_out_dir'
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sprint/tools_fa/transcript_sort.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_fa/transcript_sort.py", line 11
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sprint/tools_fq'...
Listing './lib/python3.5/site-packages/sprint/tools_sam'...
Compiling './lib/python3.5/site-packages/sprint/tools_sam/umsam2fq.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (umsam2fq.py, line 16)
Listing './lib/python3.5/site-packages/sprint/tools_zf'...
Compiling './lib/python3.5/site-packages/sprint/tools_zf/get_depth.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/get_depth.py", line 42
    except Exception,e :
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sprint/tools_zf/get_depth_old.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/get_depth_old.py", line 41
    except Exception,e :
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sprint/tools_zf/get_epm.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/get_epm.py", line 16
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sprint/tools_zf/get_snv_with_ad.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/get_snv_with_ad.py", line 12
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sprint/tools_zf/mask_zz2snv.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/mask_zz2snv.py", line 82
    except Exception , e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sprint/tools_zf/mask_zz2snv.py_bac.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/mask_zz2snv.py_bac.py", line 77
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sprint/tools_zf/sam2zz.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/sam2zz.py", line 69
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sprint/tools_zf/zz2snv.py'...
***   File "./lib/python3.5/site-packages/sprint/tools_zf/zz2snv.py", line 59
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sprint-0.1.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
